# adaptive-sleep-algorithms

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_QUICK_WINS_REPORT.md  CODE_QUALITY_IMPROVEMENTS_REPORT.md  CONTRIBUTING.md  DESIGN_EVALUATION.md  HANDOFF-NOTES.md  PHASE2_ARCHITECTURAL_DECISION.md  PHASE2_OPERATION_AUDIT.md  QUICK-START.md  README.md  REFACTORING_QUICK_REFERENCE.md  TESTING.md  TEST_FAILURE_RESOLUTION_PLAN.md  TODO.md  USER-GUIDE.md  alignment_refactoring_plan-2.md  alignment_refactoring_plan.md  pyproject.toml  readme.md
archive/product-development/: Weekly Update.md
docs/: coding_guidelines.md  data-preparation.md  feature-extraction-examples.md  feature_extraction_plan.md  parallel-processing.md  resampling_requirements.md  troubleshooting.md
docs-dev/: ARCHITECTURE_DIAGRAM.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  FRAMEWORK_GAPS_AND_PRIORITIES.md  README.md  REFACTORING_ANALYSIS_INDEX.md  SIGNAL_COLLECTION_REFACTORING_ANALYSIS.md  TECHNICAL-DEBT.md  refactoring_improvements_summary.md
docs-dev/evaluations/: README.md  documentation-evaluation.md
docs/.obsidian/: workspace.json
docs/designs/: sample_rate_handling.md
docs/diagrams/: all-diagrams.md  class_diagram-with_features.mmd  class_diagram.mmd  class_diagram_and_signal_processing_flow.mmd  data-flow-diagram.mmd  module_dependencies_and_flow.mmd
docs/evaluations/: architecture-evaluation.md
docs/requirements/: change-requests.md  requirements.md  tbd_considerations.md  visualization_requirements_and_design.md
docs/tutorials/: README.md  best-practices.md  common-workflows.md  feature-extraction-guide.md  getting-started.md  python-api-guide.md
product-development/: Project-Overview.md
product-development/.obsidian/: workspace.json
product-development/Decisions/: Decision-D01-FeaturesMetrics.md  Decision-D04-TargetPrice.md  Decision-D07-ApplicationActions.md  Decision-D08-SleepStagesEvents.md  Decision-D10-SignalsToMeasure.md  Decision-D12-Sensors.md  Decision-D13-MCU.md  Decision-D14-AlgorithmLocation.md
product-development/Development/: ProjectMap.canvas
product-development/Research/: Research-EDAvsGSR.md  (+7 more)
prompts/: revised_implementation_plan.md
tests/: README.md  __init__.py  conftest.py
workflows/: TODO.md  complete_sleep_analysis.yaml  polar_workflow-dev.yaml  polar_workflow.yaml  sleep_staging_with_rf.yaml  train_sleep_staging_model.yaml
(+173 files in other folders)
