[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep_analysis"
version = "0.1.0"
description = "A flexible signal processing framework for sleep analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "dataclasses-json>=0.5.7",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.910",
]

[project.scripts]
sleep-analysis = "sleep_analysis.cli.run_workflow:run_workflow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
