[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep_analysis"
version = "0.1.0"
description = "A flexible signal processing framework for sleep analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "dataclasses-json>=0.5.7",
    "typing-extensions>=4.0.0",
    "tzlocal>=4.0", # For system timezone detection
    "openpyxl>=3.0.0", # For Excel export (.xlsx)
]

[project.optional-dependencies]
vis = [
    "bokeh>=3.0.0",
    "plotly>=5.0.0",
]
export = [
    "h5py>=3.0.0", # For HDF5 export
]
export-extra = [
    "cairosvg>=2.5.0", # For PDF export via Bokeh/Plotly
    "svgwrite>=1.4.0", # For SVG export via Bokeh/Plotly
    "selenium>=4.0.0", # For PNG export via Bokeh
    # Note: PNG export with Bokeh/Selenium also requires a webdriver (e.g., geckodriver or chromedriver) installed separately.
]
dev = [
    "sleep_analysis[vis,export,export-extra]", # Include all optional dependencies
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.10.0",  # For mocking in tests
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.910",
]

[project.scripts]
sleep-analysis = "sleep_analysis.cli.run_workflow:run_workflow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
